Models and Dtos refactored to immutable objects