@@ -7,21 +7,23 @@ import com.sabrigulseven.flight.dto.request.UpdateAirportRequest;
 import com.sabrigulseven.flight.exception.AirportNotFoundException;
 import com.sabrigulseven.flight.model.Airport;
 import com.sabrigulseven.flight.repository.AirportRepository;
-import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.CacheConfig;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 @CacheConfig(cacheNames = {"airports"})
 public class AirportService {
     private final AirportRepository repository;
     private final AirportDtoConverter converter;
+
+    public AirportService(AirportRepository repository, AirportDtoConverter converter) {
+        this.repository = repository;
+        this.converter = converter;
+    }
 
     @Cacheable(key = "#id")
     protected Airport findById(Long id) {
@@ -32,8 +34,7 @@ public class AirportService {
 
     @CacheEvict(key = "'all'", allEntries = true)
     public AirportDto save(CreateAirportRequest createAirportRequest) {
-        Airport airport = new Airport();
-        airport.setCity(createAirportRequest.getCity());
+        Airport airport = new Airport(createAirportRequest.getCity());
         return converter.convert(repository.save(airport));
     }
 
@@ -42,8 +43,9 @@ public class AirportService {
         return repository.findAll()
                 .stream()
                 .map(converter::convert)
-                .collect(Collectors.toList());
+                .toList();
     }
+
     @Cacheable(key = "#id")
     public AirportDto getById(Long id) {
         return converter.convert(findById(id));
@@ -52,14 +54,14 @@ public class AirportService {
     @CacheEvict(key = "'all'", allEntries = true)
     public AirportDto update(Long id, UpdateAirportRequest updateAirportRequest) {
         Airport airport = findById(id);
-        airport.setCity(updateAirportRequest.getCity());
-        return converter.convert(repository.save(airport));
+        Airport updatedAirport = new Airport(airport.getId(), updateAirportRequest.getCity());
+        return converter.convert(repository.save(updatedAirport));
     }
 
     @CacheEvict(key = "'all'", allEntries = true)
-    public String  deleteById(Long id) {
+    public String deleteById(Long id) {
         Airport airport = findById(id);
         repository.delete(airport);
-        return "Airport deleted with id: " +id;
+        return "Airport deleted with id: " + id;
     }
 }
